# NestQuestWeb

./: .gitignore  Cargo.toml  Dockerfile  README.md  elm.json  index.html  package-lock.json  package.json  style.css  thanks.html  webpack.config.js
.github/workflows/: release.yml
form/: Egg.MOV  index.html  thanks.html
form/new/: index.html
public/: index.html
src/: InteropDefinitions.elm  Main.elm  Main.elm.d.ts  Ports.elm  Ticks.elm  Types.elm  Update.elm  View.elm  helpers.rs  index.css  index.js  index.ts  main.rs  nestquest.json  txns.ts  types.rs  web3.js
src/View/: Game.elm  Img.elm  Shared.elm
src/codegen/: programId.ts
src/codegen/accounts/: Stake.ts
src/codegen/instructions/: deposit.ts  index.ts  initVault.ts  withdraw.ts
src/codegen/prize/: programId.ts
src/codegen/prize/accounts/: ClaimState.ts  index.ts
src/codegen/prize/instructions/: index.ts
src/codegen/staking/: programId.ts
src/codegen/staking/accounts/: Stake.ts  Tombstone.ts  index.ts
src/codegen/staking/instructions/: claimOrb.ts  deposit.ts  index.ts  initVault.ts  withdraw.ts
