[package]
name = "nestquest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
chrono = "0.4.19"
ed25519-dalek = "1.0.1"
envy = "0.4.2"
hex = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
solana-client = "1.9.22"
solana-sdk = "1.9.22"
tokio = { version = "1.14.1", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
warp = "0.3.2"
